1.0-ALPHA24
- NEW: Accepting gzipped responses

1.0-ALPHA23
- BUGFIX: Fixed crash when coming from scorecard or subject page to detail page.

1.0-ALPHA22
- NEW: Showing comments

Version 1.0-ALPHA19, 1.0-ALPHA20, 1.0-ALPHA21
- DUMMY: Cannot rdk sign bar file with same version twice (BlackBerry limitation)
- Images in amens
- FIX: Using ios User-Agent now (so user detail page is working again)
- FIX: Disputes: Objekts retrieve from the server do not contain kinfId (Person, Thing, Place) and need it to be set to the kindId of the disputed Amen

Version 1.0-ALPHA18
- PLATFORM: Fixed signing process for BlackBerry AppWorld
- NEW: Pictures (media) in the timelines (new/following/popular)

Version 1.0-ALPHA17
- PLATFORM: First, somewhat rough, support for Google TV
- BUGFIX: Fixed a crash occurring when a place gets the first Amen

Version 1.0-ALPHA16
- BUGFIX: Do not crash on empty dates

Version 1.0-ALPHA15
- BUGFIX: Username links in follow emails handled properly

Version 1.0-ALPHA14
- BUGFIX: Disputed topics email links handled properly

Version 1.0-ALPHA13
- NEW: New app icons (courtesy of Amen GmbH)
- NEW: Exploding scorecards email links handled properly

Version 1.0-ALPHA12
- BUGFIX: Search shold work from the menu

Version 1.0-ALPHA11
- BUGFIX: Subject page now links to details page

Version 1.0-ALPHA10
- BUGFIX: search off by one fix

Version 1.0-ALPHA9
- NEW: Better Search integration
- NEW: Have an Amenoid search widget on your home screen

Version 1.0-ALPHA8
- NEW: Search without sign in
- NEW: More Fields in user details
- BUGFIX: Un/Follow Menu in User Detail Page implemented

Version 1.0-ALPHA7
- BUGFIX: Last Search result was not selectable

Version 1.0-ALPHA6
- BUGFIX: IllegalArgumentException: historyPos out of range
- NEW: Search (simple, needs improvement)

Version 1.0-ALPHA5
- BUGFIX: Crash in Timeline
- BUGFIX: Should crash less, when in Background
- NEW: show createdAt date as delta

Version 1.0-ALPHA4