@@ -189,9 +189,9 @@
     <bookmark url="file://$PROJECT_DIR$/AmDroid/src/main/java/com/jaeckel/amenoid/SubjectPageActivity.java" line="99" />
   </component>
   <component name="ChangeListManager">
-    <list default="true" id="f4c483b1-9a40-4fe9-8b39-68e93df70ae5" name="ScoreBoard" comment="accepting comment email links">
+    <list default="true" id="f4c483b1-9a40-4fe9-8b39-68e93df70ae5" name="ScoreBoard" comment="accepting comment email links (fixed)">
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/AmDroid/src/main/java/com/jaeckel/amenoid/UrlResolver.java" afterPath="$PROJECT_DIR$/AmDroid/src/main/java/com/jaeckel/amenoid/UrlResolver.java" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/AmDroid/CHANGES" afterPath="$PROJECT_DIR$/AmDroid/CHANGES" />
     </list>
     <ignored path="amdroid-parent.iws" />
     <ignored path=".idea/workspace.xml" />
@@ -499,10 +499,10 @@
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="CHANGES" pinned="false" current="false" current-in-tab="false">
+      <file leaf-file-name="CHANGES" pinned="false" current="true" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/AmDroid/CHANGES">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="3" column="11" selection-start="52" selection-end="59" vertical-scroll-proportion="-0.7307692">
+            <state line="2" column="45" selection-start="92" selection-end="92" vertical-scroll-proportion="0.069767445">
               <folding />
             </state>
           </provider>
@@ -535,10 +535,10 @@
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="UrlResolver.java" pinned="false" current="true" current-in-tab="true">
+      <file leaf-file-name="UrlResolver.java" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/AmDroid/src/main/java/com/jaeckel/amenoid/UrlResolver.java">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="85" column="32" selection-start="2619" selection-end="2619" vertical-scroll-proportion="0.27631578">
+            <state line="85" column="32" selection-start="2619" selection-end="2619" vertical-scroll-proportion="0.0">
               <folding />
             </state>
           </provider>
@@ -609,10 +609,10 @@
         <option value="$PROJECT_DIR$/pom.xml" />
         <option value="$PROJECT_DIR$/AmenLib/src/main/java/com.jaeckel/amenoid/api/AmenHttpClient.java" />
         <option value="$PROJECT_DIR$/AmenLib/src/main/java/com.jaeckel/amenoid/api/AmenServiceImpl.java" />
-        <option value="$PROJECT_DIR$/AmDroid/CHANGES" />
         <option value="$PROJECT_DIR$/AmDroid/AndroidManifest.xml" />
         <option value="$PROJECT_DIR$/AmDroid/pom.xml" />
         <option value="$PROJECT_DIR$/AmDroid/src/main/java/com/jaeckel/amenoid/UrlResolver.java" />
+        <option value="$PROJECT_DIR$/AmDroid/CHANGES" />
       </list>
     </option>
   </component>
@@ -2534,7 +2534,11 @@
       <created>1335044461508</created>
       <updated>1335044461508</updated>
     </task>
-    <option name="localTasksCounter" value="42" />
+    <task id="LOCAL-00042" summary="accepting comment email links (fixed)">
+      <created>1335044900271</created>
+      <updated>1335044900271</updated>
+    </task>
+    <option name="localTasksCounter" value="43" />
     <option name="clearContext" value="false" />
     <option name="createChangelist" value="false" />
     <servers />
@@ -2611,7 +2615,7 @@
     <option name="SHOW_VCS_ERROR_NOTIFICATIONS" value="true" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="accepting comment email links" />
+    <option name="LAST_COMMIT_MESSAGE" value="accepting comment email links (fixed)" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="true" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -2625,7 +2629,6 @@
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
     <confirmRemoveEmptyChangelist value="1" />
-    <MESSAGE value="signing woes with CrackBerry ALPHA20" />
     <MESSAGE value="unify adapters" />
     <MESSAGE value="fixed renderShortDeltaT for more than 7 days" />
     <MESSAGE value="error in amen count in user details amlistview" />
@@ -2650,6 +2653,7 @@
     <MESSAGE value="show photos in subject page" />
     <MESSAGE value="accept gzip response (updated to httpclient 4.1.2)" />
     <MESSAGE value="accepting comment email links" />
+    <MESSAGE value="accepting comment email links (fixed)" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
@@ -2740,13 +2744,6 @@
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/AmDroid/CHANGES">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="3" column="11" selection-start="52" selection-end="59" vertical-scroll-proportion="-0.7307692">
-          <folding />
-        </state>
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/AmDroid/AndroidManifest.xml">
       <provider selected="true" editor-type-id="text-editor">
         <state line="4" column="35" selection-start="218" selection-end="218" vertical-scroll-proportion="0.0">
@@ -2777,7 +2774,14 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/AmDroid/src/main/java/com/jaeckel/amenoid/UrlResolver.java">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="85" column="32" selection-start="2619" selection-end="2619" vertical-scroll-proportion="0.27631578">
+        <state line="85" column="32" selection-start="2619" selection-end="2619" vertical-scroll-proportion="0.0">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/AmDroid/CHANGES">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="2" column="45" selection-start="92" selection-end="92" vertical-scroll-proportion="0.069767445">
           <folding />
         </state>
       </provider>
